Sections for physics list requirements and implementation notes

--- a/notes.tex
+++ b/notes.tex
@@ -24,6 +24,17 @@ A remodelling of INCL code in Geant4 is in progress.
 
 \subsection{Physics list design}
 
+\subsubsection{Requirements}
+Requirements of the spallation users.
+
+List of requirements:
+\begin{itemize}
+\item Accurate neutron production
+\item Nucleus fragment production
+\item ...
+\end{itemize}
+
+\subsubsection{Implementation}
 Since INCL/ABLA covers only one part of the energy range and target
 materials, it must be complemented by other models. For energies higher
 than 3 GeV the options seem to be QGSP, FTF, Bertini and Binary.
