Validation tool (example G4 app) is a requirement

--- a/notes.tex
+++ b/notes.tex
@@ -29,6 +29,7 @@ Requirements of the spallation users.
 
 List of requirements:
 \begin{itemize}
+\item Validation tool: Spallation example application we use for validation purposes.
 \item Accurate neutron production
 \item Nucleus fragment production
 \item ...
