Enumerated requirements list

--- a/notes.tex
+++ b/notes.tex
@@ -28,12 +28,12 @@ A remodelling of INCL code in Geant4 is in progress.
 Requirements of the spallation users.
 
 List of requirements:
-\begin{itemize}
+\begin{enumerate}
 \item Validation tool: Spallation example application we use for validation purposes.
 \item Accurate neutron production
 \item Nucleus fragment production
 \item ...
-\end{itemize}
+\end{enumerate}
 
 \subsubsection{Implementation}
 Since INCL/ABLA covers only one part of the energy range and target
