--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -258,7 +258,7 @@ The INCL model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV. 
 %Outside this domain (light nuclei and energies down to 20-30 MeV)
 %the model can be tried but the capabilities have yet to be established.
-Validity of the Geant4 physics list is demonstrated form the perspective of accelerator driven systems
+Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
 and EURISOL project, especially with the neutron double differential cross sections and residual
 nuclei production.
 Improvements of the physics model are foreseen for the treatment of light targets (Carbon - Oxygen)
