Article: the domain is known so we have to use "the" instead of "a"

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -251,7 +251,7 @@ Something
 
 \begin{abstract}
 We present a new Geant4 physics list prepared for nuclear physics applications
-in a domain dominated by spallation.
+in the domain dominated by spallation.
 We discuss new Geant4 models based on translation of INCL and ABLA codes in C++ 
 and used in the physic list.
 The INCL model is well established for targets heavier than Aluminium
