Specify what INCL and ABLA actually are
INCL = intra-nuclear cascade
ABLA = de-excitation (not only evaporation, but also fission)

Also added definite article (the)

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -252,7 +252,7 @@ Something
 \begin{abstract}
 We present a new Geant4 physics list prepared for nuclear physics applications
 in the domain dominated by spallation.
-We discuss new Geant4 models based on translation of INCL and ABLA codes in C++ 
+We discuss new Geant4 models based on the translation of INCL intra-nuclear cascade and ABLA de-excitation codes in C++
 and used in the physic list.
 The INCL model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV. 
