Use plural form for models

--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -261,7 +261,7 @@ and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV.
 Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
 and EURISOL project, especially with the neutron double differential cross sections and residual
 nuclei production.
-Improvements of the physics model are foreseen for the treatment of light targets (Carbon - Oxygen)
+Improvements of the physics models are foreseen for the treatment of light targets (Carbon - Oxygen)
 and light ion beams (up to Carbon) and will be discussed.
 An example application utilizing the physics list is introduced.
 %such as spallation reactions in Accelerator Driven Systems.
