--- a/ah09aProceedings.tex
+++ b/ah09aProceedings.tex
@@ -235,35 +235,39 @@ Something
 \begin{document}
 %\title{Geant4 physics list for applications to spallation reactions in ADS
 
-\title{A Geant4 physics list for spallation and related nuclear physics applications based on INCL and ABLA models
+\title{A Geant4 physics list for spallation and related nuclear physics applications 
+based on INCL and ABLA models
 \footnote{Paper \cite{ah09aProceedings} in preparation for CHEP 2009, 21 - 27 March 2009 Prague, Czech Republic\\
 \url{http://www.particle.cz/conferences/chep2009/}}}
 %\title{A Geant4 physics list for spallation reactions}
 
-\author{{\underline{A.~Heikkinen}, P.~Kaitaniemi},} 
+\author{{\underline{A.~Heikkinen}, P.~Kaitaniemi}} 
 \affiliation{Helsinki Institute of Physics, P.O. Box 64, FIN-00014 University of Helsinki, Finland}
 
 \author{A. Boudard}
 \affiliation{CEN-Saclay, CEA-IRFU/SPhN, 91 191 Gif sur Yvette, France}
 
 \author{G.~Folger}
-\affiliation{European Organization for Nuclear Research (CERN) Switzerland}
+\affiliation{European Organization for Nuclear Research (CERN), Switzerland}
 
 \begin{abstract}
 We present a new Geant4 physics list prepared for nuclear physics applications
 in the domain dominated by spallation.
-We discuss new Geant4 models based on the translation of INCL intra-nuclear cascade and ABLA de-excitation codes in C++
+We discuss new Geant4 models based on the translation of 
+INCL intra-nuclear cascade and ABLA de-excitation codes in C++   
 and used in the physic list.
 The INCL model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV. 
-%Outside this domain (light nuclei and energies down to 20-30 MeV)
-%the model can be tried but the capabilities have yet to be established.
 Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
 and EURISOL project, especially with the neutron double differential cross sections and residual
 nuclei production.
-Improvements of the physics models are foreseen for the treatment of light targets (Carbon - Oxygen)
-and light ion beams (up to Carbon) and will be discussed.
+Foreseen improvements of the physics models for the treatment of light targets (Carbon - Oxygen)
+and light ion beams (up to Carbon) are discussed.
+%Improvements of the physics models are foreseen for the treatment of light targets (Carbon - Oxygen)
+%and light ion beams (up to Carbon) and will be discussed.
 An example application utilizing the physics list is introduced.
+%Outside this domain (light nuclei and energies down to 20-30 MeV)
+%the model can be tried but the capabilities have yet to be established.
 %such as spallation reactions in Accelerator Driven Systems.
 \end{abstract}
 
