INCL light target nucleus limits

--- a/notes.tex
+++ b/notes.tex
@@ -11,6 +11,8 @@ Limitations of INCL model:
 \item Energy range: 200 MeV - 3 GeV
 \item Projectiles: Protons, Neutrons, Pions, Deuterons, Tritons, He3, Alphas
 \item Targets: from Aluminum (maybe even Carbon) up to Uranium
+\item Targets from Deuteron to Boron supported but not extensively tested.
+\item Hydrogen (i.e. proton) targets not supported.
 \end{itemize}
 
 Future improvements of INCL model include:
