--- a/fp2009.tex
+++ b/fp2009.tex
@@ -27,55 +27,64 @@
 %%%
 %%% The title of the abstract is given here as \title{TITLE TEXT}.
 %%%
-\title{INCL/ABLA INTRA-NUCLEAR CASCADE MODEL UPDATES}
+\title{INCL/ABLA INTRA-NUCLEAR CASCADE MODELS IN GEANT4 9.2}
+%\title{INCL INTRA-NUCLEAR CASCADE MODEL IN GEANT9.2} % even more narrow scope?
+%\title{INCL/ABLA INTRA-NUCLEAR CASCADE MODEL UPDATES}
+
 
 %%%
 %%% The list of authors; underline the name of the author who is responsible
 %%% for the presentation of the paper.
 %%%
-A. Heikkinen \underline{P. Kaitaniemi}
+\underline{P. Kaitaniemi}$^{1, 2}$ A. Heikkinen$^1$ 
 
 %%%
 %%% The address.
 %%%
-P.O.Box 64 (Gustaf H\"allstr\"omin katu 2), FIN-00014 University of Helsinki, Finland\\
+$^1$~P.O.Box 64 (Gustaf H\"allstr\"omin katu 2), FIN-00014 University of Helsinki, Finland\\
 email: pekka.kaitaniemi@gmail.com
+
+$^2$~CEN-Saclay, CEA-IRFU/SPhN, 91 191 Gif sur Yvette, France
 
 %%%
 %%% Body text begins here.
 %%%
 
-We present a new Geant4 physics list prepared for nuclear physics applications
-in the domain dominated by spallation.
-We discuss new Geant4 models based on the translation of 
-INCL intra-nuclear cascade and ABLA de-excitation codes in C++   
-and used in the physic list.
+We discuss the status of INCL intra-nuclear cascade and ABLA fission/de-excitation codes
+in the latest relase of the detector simulation toolkit Geant4 9.2 \cite{pk09aCollaboration}.
 The INCL model is well established for targets heavier than Aluminium
-and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV. 
-Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
-and EURISOL project, especially with the neutron double differential cross sections and residual
-nuclei production.
-Foreseen improvements of the physics models for the treatment of light targets (Carbon - Oxygen)
-and light ion beams (up to Carbon) are discussed.
+and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk08bProceedings}. 
+
 %Improvements of the physics models are foreseen for the treatment of light targets (Carbon - Oxygen)
 %and light ion beams (up to Carbon) and will be discussed.
-An example application utilizing the physics list is introduced.
 %Outside this domain (light nuclei and energies down to 20-30 MeV)
 %the model can be tried but the capabilities have yet to be established.
 %such as spallation reactions in Accelerator Driven Systems.
-
 %%% The following minipage structures are needed to position the figure
 %%% beside the text paragraph.
 %%% For a standard figure environment, see the example below.
-
 \begin{minipage}{9cm}
-Figures may be included in the submitted files. Here we show how a
-figure can be included in a \LaTeX\ file.
+We present a new Geant4 physics list prepared for nuclear physics applications
+in the domain dominated by spallation.
+Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
+and EURISOL project, especially with the neutron double differential cross sections and residual
+nuclei production.
+An example application utilizing the physics list is introduced.
+%
+Finally, an ongoing work to improve of the physics models for the treatment of 
+light targets (Carbon - Oxygen) and light ion beams (up to Carbon) are discussed.
+Finally, an ongoing work to improve of the physics models for the treatment of 
+light targets (Carbon - Oxygen) and light ion beams (up to Carbon) (see Fig.) are discussed.
 \end{minipage}
 \hfill
 \begin{minipage}{5cm}
-\includegraphics[width=4cm]{logo.eps}
+
+
+
+\includegraphics[width=1.0\textwidth]{logo.eps}
+
 \end{minipage}
+
 
 %%%
 %%% A more typical Figure.
@@ -90,10 +99,25 @@ figure can be included in a \LaTeX\ file.
 %%%
 \begin{thebibliography}{9}
 
-\bibitem{ref1}
-A. Fyysikko and B. Fyysikko,
-\href{http://link.aps.org/abstract/PR/v108/p1175}{Fysiikan Lehti 108
-(1957) 1175}.
+\bibitem{pk09aCollaboration}
+P. Kaitaniemi and A. Heikkinen with Geant4 Collaboration
+\href{http://www.geant4.org}{http://www.geant4.org}
+
+\bibitem{pk08aProceedings}
+P. Kaitaniemi and A. Heikkinen,  
+{\em INCL4 cascade and ABLA evaporation codes in Geant4},
+Proceedings of the XLII annual conference of the Finnish Physical Society, 
+                 March 27-29 2008, Turku, Finland. 
+                 Report Series in Physics L 31, University of Turku, 2008.
+
+\bibitem{pk08bProceedings}
+A. Heikkinen, P. Kaitaniemi, and A. Boudard,
+Implementation of INCL4 cascade and ABLA evaporation codes in Geant4,
+Journal of Physics: Conference Series 119 (2008) 032024, 
+{\sf [doi:10.1088/1742-6596/119/3/032024]}
+
+%\href{http://link.aps.org/abstract/PR/v108/p1175}{Fysiikan Lehti 108
+%(1957) 1175}.
 \end{thebibliography}
 
 \end{document}
