Add mass number fig (presented in kobe). Reference still missing...

--- a/fp2009.tex
+++ b/fp2009.tex
@@ -93,6 +93,14 @@ light targets (Carbon - Oxygen) and light ion beams (up to Carbon) (see Fig.) ar
 %\centering\includegraphics[width=4cm]{logo.eps}
 %\caption{Mallikuva.}
 %\end{figure}
+\clearpage
+\begin{figure}
+\includegraphics[angle=90,scale=0.50]{masses.eps}
+\caption{Mass of the isotopes produced in reaction p(1 GeV) + $^{12}C$
+simulated using INCL/ABLA (red), INCL with Fermi break-up (black) and
+Geant4 Bertini cascade (green). Experimental data (blue) from
+\cite{carbone}.}
+\end{figure}
 
 %%%
 %%% The bibliography: the references are listed here.
@@ -115,6 +123,11 @@ A. Heikkinen, P. Kaitaniemi, and A. Boudard,
 Implementation of INCL4 cascade and ABLA evaporation codes in Geant4,
 Journal of Physics: Conference Series 119 (2008) 032024, 
 {\sf [doi:10.1088/1742-6596/119/3/032024]}
+
+\bibitem{carbone}
+X.X
+FIXME
+FIXME
 
 %\href{http://link.aps.org/abstract/PR/v108/p1175}{Fysiikan Lehti 108
 %(1957) 1175}.
