Comment out TKK logo and related minipages

--- a/fp2009.tex
+++ b/fp2009.tex
@@ -63,7 +63,7 @@ and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk0
 %%% The following minipage structures are needed to position the figure
 %%% beside the text paragraph.
 %%% For a standard figure environment, see the example below.
-\begin{minipage}{9cm}
+%\begin{minipage}{9cm}
 We present a new Geant4 physics list prepared for nuclear physics applications
 in the domain dominated by spallation.
 Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
@@ -75,15 +75,13 @@ Finally, an ongoing work to improve of the physics models for the treatment of
 light targets (Carbon - Oxygen) and light ion beams (up to Carbon) are discussed.
 Finally, an ongoing work to improve of the physics models for the treatment of 
 light targets (Carbon - Oxygen) and light ion beams (up to Carbon) (see Fig.) are discussed.
-\end{minipage}
-\hfill
-\begin{minipage}{5cm}
+%\end{minipage}
+%\hfill
+%\begin{minipage}{5cm}
 
+%\includegraphics[width=1.0\textwidth]{logo.eps}
 
-
-\includegraphics[width=1.0\textwidth]{logo.eps}
-
-\end{minipage}
+%\end{minipage}
 
 
 %%%
