Added reference to the experimental data used in the figure

--- a/fp2009.tex
+++ b/fp2009.tex
@@ -123,9 +123,10 @@ Journal of Physics: Conference Series 119 (2008) 032024,
 {\sf [doi:10.1088/1742-6596/119/3/032024]}
 
 \bibitem{carbone}
-X.X
-FIXME
-FIXME
+D.L. Olson et al
+Factorization of fragment-production cross sections in relativistic heavy-ion collisions,
+Phys. Rev. C28, 1602 (1983)
+{\sf [doi:10.1103/PhysRevC.28.1602]}
 
 %\href{http://link.aps.org/abstract/PR/v108/p1175}{Fysiikan Lehti 108
 %(1957) 1175}.
