Fitting everything to one page

--- a/fp2009.tex
+++ b/fp2009.tex
@@ -53,6 +53,9 @@ We discuss the status of INCL intra-nuclear cascade and ABLA fission/de-excitati
 in the latest relase of the detector simulation toolkit Geant4 9.2 \cite{pk09aCollaboration}.
 The INCL model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk08bProceedings}. 
+We present a new Geant4 physics list prepared for nuclear physics applications
+in the domain dominated by spallation.
+
 %Improvements of the physics models are foreseen for the treatment of light targets (Carbon - Oxygen)
 %and light ion beams (up to Carbon) and will be discussed.
 %Outside this domain (light nuclei and energies down to 20-30 MeV)
@@ -61,9 +64,8 @@ and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk0
 %%% The following minipage structures are needed to position the figure
 %%% beside the text paragraph.
 %%% For a standard figure environment, see the example below.
+
 \begin{minipage}{6cm}
-We present a new Geant4 physics list prepared for nuclear physics applications
-in the domain dominated by spallation.
 Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
 and EURISOL project, especially with the neutron double differential cross sections and residual
 nuclei production.
@@ -72,17 +74,16 @@ An example application utilizing the physics list is introduced.
 Finally, an ongoing work to improve of the physics models for the treatment of 
 light targets (Carbon - Oxygen) and light ion beams (up to Carbon) are discussed.
 Finally, an ongoing work to improve of the physics models for the treatment of 
-light targets (Carbon - Oxygen) and light ion beams (up to Carbon) (see Fig.) are discussed.
+light targets (Carbon - Oxygen) and light ion beams (up to Carbon) (Fig.~1) are discussed.
 \end{minipage}
 \hfill
 \begin{minipage}{9cm}
 %\includegraphics[width=1.0\textwidth]{logo.eps}
 %\includegraphics[angle=90,scale=0.5]{masses.eps}
-\includegraphics[scale=0.52]{masses2.eps}
-{\bf Fig.~1} Mass of the isotopes produced in reaction p(1 GeV) + $^{12}C$
-simulated using INCL/ABLA (red), INCL with Fermi break-up (black) and
-Geant4 Bertini cascade (green). Experimental data (blue) from
-\cite{carbone}.
+\includegraphics[scale=0.59]{masses2.eps}
+{\bf Fig.~1}~Mass of the isotopes produced in reaction p(1 GeV) + $^{12}C$.
+INCL/ABLA, INCL with Fermi break-up, 
+and Geant4 Bertini simulations are compared with experimental data points from \cite{carbone}.
 \end{minipage}
 
 
