--- a/fp2009.tex
+++ b/fp2009.tex
@@ -50,11 +50,9 @@ $^2$~CEN-Saclay, CEA-IRFU/SPhN, 91 191 Gif sur Yvette, France
 %%% Body text begins here.
 %%%
 We discuss the status of INCL intra-nuclear cascade and ABLA fission/de-excitation codes
-in the latest relase of the detector simulation toolkit Geant4 9.2 \cite{pk09aCollaboration}.
+in the latest release of the detector simulation toolkit Geant4 9.2 \cite{pk09aCollaboration}.
 The INCL model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk08bProceedings}. 
-We present a new Geant4 physics list prepared for nuclear physics applications
-in the domain dominated by spallation.
 
 %Improvements of the physics models are foreseen for the treatment of light targets (Carbon - Oxygen)
 %and light ion beams (up to Carbon) and will be discussed.
@@ -66,24 +64,24 @@ in the domain dominated by spallation.
 %%% For a standard figure environment, see the example below.
 
 \begin{minipage}{6cm}
+We present a new Geant4 physics list prepared for nuclear physics applications
+in the domain dominated by spallation.
 Validity of the Geant4 physics list is demonstrated from the perspective of accelerator driven systems
 and EURISOL project, especially with the neutron double differential cross sections and residual
 nuclei production.
 An example application utilizing the physics list is introduced.
 %
 Finally, an ongoing work to improve of the physics models for the treatment of 
-light targets (Carbon - Oxygen) and light ion beams (up to Carbon) are discussed.
-Finally, an ongoing work to improve of the physics models for the treatment of 
 light targets (Carbon - Oxygen) and light ion beams (up to Carbon) (Fig.~1) are discussed.
 \end{minipage}
 \hfill
-\begin{minipage}{9cm}
+\begin{minipage}{8.8cm}
 %\includegraphics[width=1.0\textwidth]{logo.eps}
 %\includegraphics[angle=90,scale=0.5]{masses.eps}
 \includegraphics[scale=0.59]{masses2.eps}
-{\bf Fig.~1}~Mass of the isotopes produced in reaction p(1 GeV) + $^{12}C$.
+{\bf Fig.~1}~Mass of the isotopes produced in reaction p(1 GeV) + Carbon-12.
 INCL/ABLA, INCL with Fermi break-up, 
-and Geant4 Bertini simulations are compared with experimental data points from \cite{carbone}.
+and Geant4 Bertini simulations are compared with experimental data points from Ref.~\cite{carbone}.
 \end{minipage}
 
 
