State institutes before e-mail address

--- a/fp2009.tex
+++ b/fp2009.tex
@@ -42,9 +42,10 @@
 %%% The address.
 %%%
 $^1$~P.O.Box 64 (Gustaf H\"allstr\"omin katu 2), FIN-00014 University of Helsinki, Finland\\
+$^2$~CEN-Saclay, CEA-IRFU/SPhN, 91 191 Gif sur Yvette, France\\
 email: pekka.kaitaniemi@gmail.com
 
-$^2$~CEN-Saclay, CEA-IRFU/SPhN, 91 191 Gif sur Yvette, France
+
 
 %%%
 %%% Body text begins here.
