Add missing citation

--- a/fp2009.tex
+++ b/fp2009.tex
@@ -51,7 +51,7 @@ email: pekka.kaitaniemi@gmail.com
 %%% Body text begins here.
 %%%
 We discuss the status of INCL intra-nuclear cascade and ABLA fission/de-excitation codes
-in the latest release of the detector simulation toolkit Geant4 9.2 \cite{pk09aCollaboration}.
+in the latest release of the detector simulation toolkit Geant4 9.2 \cite{pk09aCollaboration, pk08aProceedings}.
 The INCL model is well established for targets heavier than Aluminium
 and projectile energies from $\sim$ 150 MeV up to 2.5 GeV $\sim$ 3 GeV \cite{pk08bProceedings}. 
 
