Minor style correction to the bibitems 3 and 4

--- a/fp2009.tex
+++ b/fp2009.tex
@@ -116,13 +116,13 @@ Proceedings of the XLII annual conference of the Finnish Physical Society,
 
 \bibitem{pk08bProceedings}
 A. Heikkinen, P. Kaitaniemi, and A. Boudard,
-Implementation of INCL4 cascade and ABLA evaporation codes in Geant4,
+{\em Implementation of INCL4 cascade and ABLA evaporation codes in Geant4},
 Journal of Physics: Conference Series 119 (2008) 032024, 
 {\sf [doi:10.1088/1742-6596/119/3/032024]}
 
 \bibitem{carbone}
-D.L. Olson et al
-Factorization of fragment-production cross sections in relativistic heavy-ion collisions,
+D.L. Olson et al.,
+{\em Factorization of fragment-production cross sections in relativistic heavy-ion collisions},
 Phys. Rev. C28, 1602 (1983)
 {\sf [doi:10.1103/PhysRevC.28.1602]}
 
