Add build rules to the Makefile and set the graphcis path

--- a/poster.tex
+++ b/poster.tex
@@ -8,7 +8,7 @@
 \usepackage{calc}
 \usepackage{multicol,xspace}
 
-  
+\graphicspath{{.}{inclposter-2007/}{images/}}  
 % defines the width and height of the poster, scaled down to a viewable size
 %\def\width{12in}  % this is 3'/3 = 36'' / 3 = 12''
 %\def\height{17in} % this is 4'/3 = 48'' / 3 = 16''+ 3'/3 (for top and bottom inch)
