--- a/poster.tex
+++ b/poster.tex
@@ -96,9 +96,10 @@
    \parbox[c]{0.8\linewidth}{
 		\begin{center}
 			\textbf{\Huge {\sf INCL4} CASCADE AND {\sf ABLA} EVAPORATION CODES IN {\sf GEANT4}} \\[0.5em]
-			\textbf{\LARGE Aatos Heikkinen, Pekka Kaitaniemi$^{\dagger}$} \\[0.3em]
-			{\Large $^{\dagger}$ {\tt kaitanie@cc.helsinki.fi}} \\
-                        {\textsc Helsinki Institute of Physics, P.O.B. 64, FIN-00014 University of Helsinki, Finland}
+			\textbf{\LARGE Aatos Heikkinen$^{1}$, Pekka Kaitaniemi$^{\dagger, 1, 2}$} \\[0.3em]
+			{\Large $^{\dagger}$ {\tt pekka.kaitaniemi@cea.fr}} \\
+                        {\LARGE $^1$~Helsinki Institute of Physics, P.O.B. 64, FIN-00014 University of Helsinki, Finland}\\
+                        {\LARGE $^2$~CEN-Saclay, CEA-IRFU/SPhN, 91 191 Gif sur Yvette, France}
                         \vskip2cm
 		\end{center}
 	}
