Added Fermi breakup box

--- a/poster.tex
+++ b/poster.tex
@@ -202,8 +202,22 @@ The number of parameters is kept low in order to have as much
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{textbox}
+\section*{{\Huge {\sf LIGHT TARGETS}}}
+{\color{udsect}
 
+{\sf INCL} can now be used with the {\sf Geant4} Fermi break-up
+model. In order to choose between ABLA and Fermi break-up we have
+introduced a selection rule in the code. Currently cascade remnant
+nuclei lighter than A < 13 are handled using Fermi break-up.
 
+\begin{center}
+{\Huge {\sf p(1 GeV) + C}}
+\includegraphics[scale=0.6,angle=90]{images/masses.eps}
+\end{center}
+}
+\end{textbox}
+
+\begin{textbox}
 \section*{{\Huge {\sf ABLA EVAPORATION}}}
 {\color{udsect}
 The ablation code {\sf ABLA} \cite{abla} for evaporation and fission modeling is developed at GSI, Darmstadt.
