Added carbon projectile box and figures

--- a/poster.tex
+++ b/poster.tex
@@ -218,6 +218,25 @@ nuclei lighter than A < 13 are handled using Fermi break-up.
 \end{textbox}
 
 \begin{textbox}
+\section*{{\Huge {\sf CARBON PROJECTILES}}}
+{\color{udsect}
+
+Carbon projectile support has been added to the {\sf INCL}
+cascade. Carbon beams are of interest for medical applications of {\sf
+Geant4}.
+
+\begin{center}
+{\Huge {\sf C(400 MeV/nucleon) + Cu}}
+\includegraphics[scale=0.6,angle=0]{images/carbonCopper.eps}
+\end{center}
+\begin{center}
+{\Huge {\sf C(400 MeV/nucleon) + Cu}}
+\includegraphics[scale=0.6,angle=0]{images/carbonCopperLin.eps}
+\end{center}
+}
+\end{textbox}
+
+\begin{textbox}
 \section*{{\Huge {\sf ABLA EVAPORATION}}}
 {\color{udsect}
 The ablation code {\sf ABLA} \cite{abla} for evaporation and fission modeling is developed at GSI, Darmstadt.
