Copy new bibitems from the abstract to the poster

--- a/poster.tex
+++ b/poster.tex
@@ -315,6 +315,30 @@ on reimplementing the original {\sf FORTRAN} codes in {\sf C++} language.
 \bibitem{data} X.Ledoux et al., \emph{Spallation Neutron Production by
   0.8, 1.2, and 1.6 GeV Protons on Pb Targets} Phys. Rev. Lett. 82
   (1999)
+
+\bibitem{pk09aCollaboration}
+P. Kaitaniemi and A. Heikkinen with Geant4 Collaboration
+{\tt http://www.geant4.org}{http://www.geant4.org}
+
+\bibitem{pk08aProceedings}
+P. Kaitaniemi and A. Heikkinen,  
+{\em INCL4 cascade and ABLA evaporation codes in Geant4},
+Proceedings of the XLII annual conference of the Finnish Physical Society, 
+                 March 27-29 2008, Turku, Finland. 
+                 Report Series in Physics L 31, University of Turku, 2008.
+
+\bibitem{pk08bProceedings}
+A. Heikkinen, P. Kaitaniemi, and A. Boudard,
+{\em Implementation of INCL4 cascade and ABLA evaporation codes in Geant4},
+Journal of Physics: Conference Series 119 (2008) 032024, 
+{\sf [doi:10.1088/1742-6596/119/3/032024]}
+
+\bibitem{carbone}
+D.L. Olson et al.,
+{\em Factorization of fragment-production cross sections in relativistic heavy-ion collisions},
+Phys. Rev. C28, 1602 (1983)
+{\sf [doi:10.1103/PhysRevC.28.1602]}
+
 %\bibliographystyle{abbrv}
 %\bibliography{latex_poster}
 \end{thebibliography}
