--- a/poster.tex
+++ b/poster.tex
@@ -202,6 +202,19 @@ The number of parameters is kept low in order to have as much
 %\end{textbox}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{textbox}
+\section*{{\Huge {\sf PHYSICS LIST}}}
+{\color{udsect}
+
+New physics list called {\sf QGSP\_INCLABLA} has been implemented with
+spallation users in mind. This list uses INCL/ABLA models for proton,
+neutron and pion inelastic interactions in the energy range 0 - 3
+GeV. In this energy range INCL/ABLA is the only model used for the
+aforementioned processes.
+
+}
+\end{textbox}
+
+\begin{textbox}
 \section*{{\Huge {\sf LIGHT TARGETS}}}
 {\color{udsect}
 
