Add isotope/fragment plots to the poster

--- a/poster.tex
+++ b/poster.tex
@@ -211,6 +211,14 @@ neutron and pion inelastic interactions in the energy range 0 - 3
 GeV. In this energy range INCL/ABLA is the only model used for the
 aforementioned processes.
 
+Fragments produced in reaction: p(1 GeV) + Pb
+\includegraphics[scale=0.5]{images/fragments.eps}
+
+Isotope production:
+\includegraphics[scale=0.5]{images/pPbIsotopes.eps}
+
+Isotope production:
+
 }
 \end{textbox}
 
