Add neutron double-diff figs to the poster

--- a/poster.tex
+++ b/poster.tex
@@ -217,7 +217,12 @@ Fragments produced in reaction: p(1 GeV) + Pb
 Isotope production:
 \includegraphics[scale=0.5]{images/pPbIsotopes.eps}
 
-Isotope production:
+Neutron production:
+\includegraphics[scale=0.5]{images/zirkonium.eps}
+
+\includegraphics[scale=0.5]{images/iron.eps}
+
+\includegraphics[scale=0.5]{images/aluminum.eps}
 
 }
 \end{textbox}
