Added new p+Pb neutron double-diff plot

--- a/poster.tex
+++ b/poster.tex
@@ -188,7 +188,7 @@ The number of parameters is kept low in order to have as much
 %\begin{figure}
 \vskip3.5cm
 {\Huge {\sf p(1.2 GeV) + Pb $\rightarrow$ n + X}}
-\includegraphics[scale=0.70]{images/pPbDD.eps}
+\includegraphics[scale=0.70]{images/lead.eps}
 %\label{fig:pPbdd1200MeV}
 %\end{figure}
 \vskip-0.3cm
