Do not show carbon figs

--- a/poster.tex
+++ b/poster.tex
@@ -251,13 +251,16 @@ Carbon projectile support has been added to the {\sf INCL}
 cascade. Carbon beams are of interest for medical applications of {\sf
 Geant4}.
 
+{\tt NOTE: CARBON FIGS PRODUCED USING BUGGY CODE. THEY WILL NOT BE
+PART OF THE POSTER}
+
 \begin{center}
 {\Huge {\sf C(400 MeV/nucleon) + Cu}}
-\includegraphics[scale=0.6,angle=0]{images/carbonCopper.eps}
+%\includegraphics[scale=0.6,angle=0]{images/carbonCopper.eps}
 \end{center}
 \begin{center}
 {\Huge {\sf C(400 MeV/nucleon) + Cu}}
-\includegraphics[scale=0.6,angle=0]{images/carbonCopperLin.eps}
+%\includegraphics[scale=0.6,angle=0]{images/carbonCopperLin.eps}
 \end{center}
 }
 \end{textbox}
