--- a/poster.tex
+++ b/poster.tex
@@ -302,7 +302,7 @@ aforementioned processes.
 {\sf INCL} can now be used with the {\sf Geant4} Fermi break-up
 model. In order to choose between ABLA and Fermi break-up we have
 introduced a selection rule in the code. Currently cascade remnant
-nuclei lighter than A < 13 are handled using Fermi break-up.
+nuclei lighter than A $<$ 13 are handled using Fermi break-up.
 }
 \end{textbox}
 
